--- a/PhotoView/Base.lproj/Main.storyboard
+++ b/PhotoView/Base.lproj/Main.storyboard
@@ -1,11 +1,27 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="bUM-B9-Jhd">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="THK-mO-WKR">
+            <objects>
+                <navigationController id="bUM-B9-Jhd" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="NkX-Pn-XdX">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="ou6-4U-S3X"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Flo-fy-xxM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-156" y="464"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -20,7 +36,7 @@
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="efQ-UK-SmQ">
                                 <rect key="frame" x="0.0" y="517" width="320" height="51"/>
-                                <color key="backgroundColor" red="0.78450520833333337" green="0.16406218367046918" blue="0.029970860696209765" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.95263178661616166" green="0.44522618749757831" blue="0.36339452490921675" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="51" id="WMf-H1-Xsk"/>
                                 </constraints>
@@ -61,6 +77,7 @@
                             <constraint firstAttribute="trailingMargin" secondItem="HmW-eg-mXB" secondAttribute="trailing" constant="-20" id="hXV-XC-Sz9"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="mYC-ME-KB7"/>
                     <connections>
                         <outlet property="imageCollectionView" destination="HmW-eg-mXB" id="PUU-P2-R9i"/>
                         <outlet property="mapView" destination="ael-6T-euz" id="b3b-eV-Uji"/>
@@ -69,6 +86,38 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="301" y="464"/>
+        </scene>
+        <!--Pop Up View Controller-->
+        <scene sceneID="FCv-8b-6uJ">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ANW-LT-pxs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController storyboardIdentifier="popupView" id="jsb-WW-yOp" customClass="PopUpViewController" customModule="PhotoView" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="uCp-nX-V91"/>
+                        <viewControllerLayoutGuide type="bottom" id="llY-Z7-POk"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="6Wd-8u-GAs">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nmq-gg-fAN">
+                                <rect key="frame" x="0.0" y="-32" width="320" height="600"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="nmq-gg-fAN" secondAttribute="trailing" constant="-20" id="FzP-W3-OvT"/>
+                            <constraint firstItem="nmq-gg-fAN" firstAttribute="leading" secondItem="6Wd-8u-GAs" secondAttribute="leadingMargin" constant="-20" id="ZQI-Uh-S24"/>
+                            <constraint firstItem="llY-Z7-POk" firstAttribute="top" secondItem="nmq-gg-fAN" secondAttribute="bottom" id="p9O-Im-Du7"/>
+                            <constraint firstItem="nmq-gg-fAN" firstAttribute="top" secondItem="uCp-nX-V91" secondAttribute="bottom" constant="-52" id="rBL-fy-l3R"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="fullImageView" destination="nmq-gg-fAN" id="NEC-y1-PeK"/>
+                    </connections>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="665" y="464"/>
         </scene>
     </scenes>
 </document>
