--- a/PhotoView/Base.lproj/Main.storyboard
+++ b/PhotoView/Base.lproj/Main.storyboard
@@ -34,20 +34,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="efQ-UK-SmQ">
-                                <rect key="frame" x="0.0" y="517" width="320" height="51"/>
-                                <color key="backgroundColor" red="0.95263178661616166" green="0.44522618749757831" blue="0.36339452490921675" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="51" id="WMf-H1-Xsk"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <state key="normal" title="add your photo">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="loadImageButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="LzH-g9-75I"/>
-                                </connections>
-                            </button>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="ael-6T-euz">
                                 <rect key="frame" x="0.0" y="20" width="320" height="415"/>
                             </mapView>
@@ -60,8 +46,35 @@
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
-                                <cells/>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="6Hd-Uz-ypW" customClass="PhotoCell" customModule="PhotoView" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="1" width="92" height="92"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="92" height="92"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <connections>
+                                            <segue destination="xwh-Dg-TkY" kind="push" identifier="SegueToZoomView" id="nuf-ID-iTV"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
                             </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="efQ-UK-SmQ">
+                                <rect key="frame" x="81" y="517" width="320" height="51"/>
+                                <color key="backgroundColor" red="0.95263178661616166" green="0.44522618749757831" blue="0.36339452490921675" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="51" id="WMf-H1-Xsk"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="add your photo">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="loadImageButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="LzH-g9-75I"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
@@ -87,37 +100,52 @@
             </objects>
             <point key="canvasLocation" x="301" y="464"/>
         </scene>
-        <!--Pop Up View Controller-->
-        <scene sceneID="FCv-8b-6uJ">
+        <!--Zoom View Controller-->
+        <scene sceneID="F4m-j4-aqI">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ANW-LT-pxs" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <viewController storyboardIdentifier="popupView" id="jsb-WW-yOp" customClass="PopUpViewController" customModule="PhotoView" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ZoomView" id="xwh-Dg-TkY" customClass="ZoomViewController" customModule="PhotoView" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="uCp-nX-V91"/>
-                        <viewControllerLayoutGuide type="bottom" id="llY-Z7-POk"/>
+                        <viewControllerLayoutGuide type="top" id="agw-sA-chi"/>
+                        <viewControllerLayoutGuide type="bottom" id="jpX-Ao-VC5"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="6Wd-8u-GAs">
+                    <view key="view" contentMode="scaleToFill" id="KkJ-zK-GpY">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nmq-gg-fAN">
-                                <rect key="frame" x="0.0" y="-32" width="320" height="600"/>
-                            </imageView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ArI-Pt-Q5v">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dMP-Vf-ERl"/>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="dMP-Vf-ERl" firstAttribute="top" secondItem="ArI-Pt-Q5v" secondAttribute="top" id="d9M-Wy-0S0"/>
+                                    <constraint firstItem="dMP-Vf-ERl" firstAttribute="leading" secondItem="ArI-Pt-Q5v" secondAttribute="leading" id="gOo-Wi-amp"/>
+                                    <constraint firstAttribute="bottom" secondItem="dMP-Vf-ERl" secondAttribute="bottom" id="yeI-vA-MCa"/>
+                                    <constraint firstAttribute="trailing" secondItem="dMP-Vf-ERl" secondAttribute="trailing" id="yuD-Ym-VIW"/>
+                                </constraints>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailingMargin" secondItem="nmq-gg-fAN" secondAttribute="trailing" constant="-20" id="FzP-W3-OvT"/>
-                            <constraint firstItem="nmq-gg-fAN" firstAttribute="leading" secondItem="6Wd-8u-GAs" secondAttribute="leadingMargin" constant="-20" id="ZQI-Uh-S24"/>
-                            <constraint firstItem="llY-Z7-POk" firstAttribute="top" secondItem="nmq-gg-fAN" secondAttribute="bottom" id="p9O-Im-Du7"/>
-                            <constraint firstItem="nmq-gg-fAN" firstAttribute="top" secondItem="uCp-nX-V91" secondAttribute="bottom" constant="-52" id="rBL-fy-l3R"/>
+                            <constraint firstItem="jpX-Ao-VC5" firstAttribute="top" secondItem="ArI-Pt-Q5v" secondAttribute="bottom" id="MNb-ML-jaf"/>
+                            <constraint firstAttribute="trailing" secondItem="ArI-Pt-Q5v" secondAttribute="trailing" id="OAT-we-tbY"/>
+                            <constraint firstItem="ArI-Pt-Q5v" firstAttribute="top" secondItem="KkJ-zK-GpY" secondAttribute="top" id="PCf-bX-Gix"/>
+                            <constraint firstItem="ArI-Pt-Q5v" firstAttribute="leading" secondItem="KkJ-zK-GpY" secondAttribute="leading" id="Tuq-PP-IIn"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="iMb-2v-rKS"/>
                     <connections>
-                        <outlet property="fullImageView" destination="nmq-gg-fAN" id="NEC-y1-PeK"/>
+                        <outlet property="imageViewBottomConstraint" destination="yeI-vA-MCa" id="Xaq-EZ-LwE"/>
+                        <outlet property="imageViewLeadingConstraint" destination="gOo-Wi-amp" id="PzH-zA-Unh"/>
+                        <outlet property="imageViewTopConstraint" destination="d9M-Wy-0S0" id="Ch5-Jz-6sb"/>
+                        <outlet property="imageViewTrailingConstraint" destination="yuD-Ym-VIW" id="Q6T-IG-cVZ"/>
+                        <outlet property="scrollView" destination="ArI-Pt-Q5v" id="M9c-28-LLf"/>
+                        <outlet property="zoomImgView" destination="dMP-Vf-ERl" id="wNY-rS-bv1"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Lxs-05-ltp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="665" y="464"/>
+            <point key="canvasLocation" x="691" y="464"/>
         </scene>
     </scenes>
 </document>
