--- a/PhotoView/Base.lproj/Main.storyboard
+++ b/PhotoView/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F1808" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="bUM-B9-Jhd">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="bUM-B9-Jhd">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -25,7 +25,7 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="PhotoView" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Autumn_Vista" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -34,21 +34,38 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="efQ-UK-SmQ">
+                                <rect key="frame" x="0.0" y="525" width="320" height="43"/>
+                                <color key="backgroundColor" red="0.95263178661616166" green="0.44522618749757831" blue="0.36339452490921675" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="WMf-H1-Xsk" userLabel="height = 45"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="add your photo">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="loadImageButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="LzH-g9-75I"/>
+                                </connections>
+                            </button>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="ael-6T-euz">
                                 <rect key="frame" x="0.0" y="20" width="320" height="415"/>
                             </mapView>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="HmW-eg-mXB">
-                                <rect key="frame" x="0.0" y="433" width="320" height="94"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="HmW-eg-mXB">
+                                <rect key="frame" x="0.0" y="432" width="320" height="94"/>
                                 <color key="backgroundColor" red="0.98958333330000003" green="0.72691117520000004" blue="0.391343938" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="94" id="IHz-Km-zpQ"/>
+                                </constraints>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="1" minimumInteritemSpacing="1" id="YMM-ir-DLh">
                                     <size key="itemSize" width="92" height="92"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    <inset key="sectionInset" minX="1" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="6Hd-Uz-ypW" customClass="PhotoCell" customModule="PhotoView" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="1" width="92" height="92"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="6Hd-Uz-ypW" customClass="PhotoCell" customModule="Autumn_Vista" customModuleProvider="target">
+                                        <rect key="frame" x="1" y="33" width="92" height="92"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="92" height="92"/>
@@ -62,20 +79,6 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="efQ-UK-SmQ">
-                                <rect key="frame" x="81" y="517" width="320" height="51"/>
-                                <color key="backgroundColor" red="0.95263178661616166" green="0.44522618749757831" blue="0.36339452490921675" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="51" id="WMf-H1-Xsk"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <state key="normal" title="add your photo">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="loadImageButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="LzH-g9-75I"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
@@ -87,7 +90,7 @@
                             <constraint firstAttribute="trailingMargin" secondItem="ael-6T-euz" secondAttribute="trailing" constant="-20" id="Eit-td-7Or"/>
                             <constraint firstItem="efQ-UK-SmQ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="UHr-yX-jMK"/>
                             <constraint firstItem="HmW-eg-mXB" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="aUA-0d-vef"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="HmW-eg-mXB" secondAttribute="bottom" constant="41" id="g3j-MW-aIb"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="HmW-eg-mXB" secondAttribute="bottom" constant="50" id="g3j-MW-aIb"/>
                             <constraint firstAttribute="trailingMargin" secondItem="HmW-eg-mXB" secondAttribute="trailing" constant="-20" id="hXV-XC-Sz9"/>
                         </constraints>
                     </view>
@@ -104,7 +107,7 @@
         <!--Zoom View Controller-->
         <scene sceneID="F4m-j4-aqI">
             <objects>
-                <viewController storyboardIdentifier="ZoomView" id="xwh-Dg-TkY" customClass="ZoomViewController" customModule="PhotoView" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ZoomView" id="xwh-Dg-TkY" customClass="ZoomViewController" customModule="Autumn_Vista" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="agw-sA-chi"/>
                         <viewControllerLayoutGuide type="bottom" id="jpX-Ao-VC5"/>
@@ -134,7 +137,22 @@
                             <constraint firstItem="ArI-Pt-Q5v" firstAttribute="leading" secondItem="KkJ-zK-GpY" secondAttribute="leading" id="Tuq-PP-IIn"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="iMb-2v-rKS"/>
+                    <navigationItem key="navigationItem" id="iMb-2v-rKS">
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="iZd-K4-Wq1">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="TQE-7C-jCL">
+                                <rect key="frame" x="233" y="7" width="71" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
+                                <state key="normal" title="Directions"/>
+                                <connections>
+                                    <action selector="directionsButtonPressed:" destination="xwh-Dg-TkY" eventType="touchUpInside" id="8aq-sl-cF9"/>
+                                </connections>
+                            </button>
+                            <connections>
+                                <action selector="drivingDirectionsButtonClicked:" destination="xwh-Dg-TkY" id="dEt-5h-ofS"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="imageViewBottomConstraint" destination="yeI-vA-MCa" id="Xaq-EZ-LwE"/>
                         <outlet property="imageViewLeadingConstraint" destination="gOo-Wi-amp" id="PzH-zA-Unh"/>
